log/build_2022-11-13_14-13-19/robo_builder_py/stderr.log
  File "/home/ubuntu/workspace/Velizar/robotics_v1/install/robo_builder_py/lib/python3.8/site-packages/robo_builder_py/robo_builder.py", line 15
    state_data = self.robot_converse.get_joint_state())
                                                      ^
SyntaxError: unmatched ')'

